# skillz

./: Cargo.toml  Makefile  README.md  shell.nix
.github/workflows/: release.yml
src/: config.rs  install.rs  main.rs  new.rs  registry.rs  search.rs  update.rs  validate.rs
