[package]
name = "skillz"
version = "20260330.0.0"
edition = "2024"
authors = ["Jake Goldsborough <github@pancakes.email>"]
description = "Claude Code skill package manager"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
toml = "0.8"
