[package]
name = "skillz-rs"
version = "20260330.0.3"
edition = "2024"
authors = ["Jake Goldsborough <github@pancakes.email>"]
description = "Claude Code skill package manager - Install and manage skills from GitHub"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jakegoldsborough/skillz"
homepage = "https://github.com/jakegoldsborough/skillz"
documentation = "https://github.com/jakegoldsborough/skillz#readme"
keywords = ["claude", "cli", "package-manager", "skills"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "skillz"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
toml = "0.8"
