[package]
name = "skillz-rs"
version = "20260330.0.6"
edition = "2024"
authors = ["Jake Goldsborough <github@pancakes.email>"]
description = "Claude Code skill package manager - Install and manage skills from GitHub"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ducks/skillz"
homepage = "https://github.com/ducks/skillz"
documentation = "https://github.com/ducks/skillz#readme"
keywords = ["claude", "cli", "package-manager", "skills"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "skillz"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
toml = "0.8"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
